# 234Compositor

./: .travis.yml  234comp-config.in  ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile_hand  Makefile_hand.K  Makefile_hand.shared  NEWS  config.h.in  configure  configure.ac  travis_setup.sh
doc/: Makefile.am  Makefile.in
doc/doxygen/: Doxyfile
include/: 234compVersion.h  234compVersion.h.in  234compositor.h  compress.h  exchange.h  merge.h  misc.h
sample/: Makefile  Makefile.am  Makefile.in  compile.sh  test_234byte.c  test_234byte_mandel.c  test_234float.c  test_234float_mandel.c
sample/GLUT/: compile.sh  test_234byte.c  test_234float.c
sample/GLUT/input_images/: clean_images.sh  compile_gl.sh  generate_image.c  show_image.c
sample/input_images/: compile_gl.sh
src/: 234compositor.c  Makefile.am  Makefile.in  compress.c  exchange.c  merge.c  misc.c
