##############################################################################
#
# 234Compositor - Image data merging library
#
# Copyright (c) 2013-2015 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
##############################################################################


doc_includedir = $(prefix)/doc
doc_include_HEADERS = \
    $(top_builddir)/doc/lib234doc_manual.pdf